--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body{
 
 #startBtn{
     background-color: #000;
+    position: relative;
     width: 140px;
     height: 45px;
     outline: none;
@@ -69,6 +70,19 @@ body{
     color: #fff;
     cursor: pointer;
     margin-bottom: 35px;
+    overflow: hidden;
+}
+
+#startBtn::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 96%;
+    width: 10px;
+    height: 100%;
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(170,170,170,1) 50%, rgba(154,154,154,0.9473039215686274) 100%);
+    transform: skewX(-45deg);
 }
 
 .content p{
